<?xml version="1.0"?>
<package>
  <name>darknet_ros_msgs</name>
  <version>1.1.2</version>
  <description>ROS message definitions for YOLO in ROS.</description>
  <maintainer email="marko.bjelonic@mavt.ethz.ch">Marko Bjelonic</maintainer>
  <license>BSD</license>
  <url type="website">https://bitbucket.org/leggedrobotics/darknet_ros</url>
  <author email="marko.bjelonic@mavt.ethz.ch">Marko Bjelonic</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
